--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,7 @@ dependencies:
   glassmorphism: ^3.0.0
   flutter_neumorphic: ^3.2.0
   lottie: ^2.1.0
+  cloud_firestore: ^4.3.1
 
 dev_dependencies:
   flutter_test:
