--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,7 @@ dependencies:
   flutter_neumorphic: ^3.2.0
   lottie: ^2.1.0
   cloud_firestore: ^4.3.1
+  firebase_storage: ^11.0.10
 
 dev_dependencies:
   flutter_test:
