--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,7 @@ dependencies:
   lottie: ^2.1.0
   cloud_firestore: ^4.3.1
   firebase_storage: ^11.0.10
+  firebase_auth: ^4.2.4
 
 dev_dependencies:
   flutter_test:
