--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,6 +45,7 @@ dependencies:
   cloud_firestore: ^4.3.1
   firebase_storage: ^11.0.10
   firebase_auth: ^4.2.4
+  image_picker: ^0.8.6
 
 dev_dependencies:
   flutter_test:
